timer & scoreboard added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
   <div class="page-wrapper">
+    <div class="info-board">
+      <div class="scoreboard"></div>
+      <div class="emoji"></div>
+      <div class="timer"></div>
+    </div>
   <div class="grid-container"></div>
 </div>
 </body>
