mode-choice complete

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="welcome-screen">
+    <h1>Welcome to Minesweeper</h1>
+    <p>Please choose your mode</p>
+    <div class ="button-container">
+      <button class= "beginner-button">Beginner</button>
+      <button class="advanced-button">Advanced</button>
+      <button class="expert-button">Expert</button>
+    </div>
+  </div>
   <div class="page-wrapper">
     <div class="info-board">
       <div class="scoreboard"></div>
@@ -16,6 +25,6 @@
       <div class="timer"></div>
     </div>
   <div class="grid-container"></div>
-</div>
+  </div>
 </body>
 </html>
