end game conditions working

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="end-game"></div>
   <div class="welcome-screen">
     <h1>Welcome to Minesweeper</h1>
     <p>Please choose your mode</p>
@@ -29,5 +30,6 @@
     </div>
   <div class="grid-container"></div>
   </div>
+    <button class="play-again">Play Again</button>
 </body>
 </html>
