EOD 3 basic styling, 3 levels, randomised mines fixed

--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
     </div>
   </div>
   <div class="page-wrapper">
-    <div class="info-board">
-      <div class="scoreboard"></div>
-      <div class="emoji"></div>
-      <div class="timer"></div>
+      <div class="info-board">
+        <div class="scoreboard"></div>
+        <div class="timer"></div>  
+      </div>
+    <div class="winner">
+      <h1>Congratulations</h1>
+      <p>Your Final Score Is</p>
     </div>
-  <div class="grid-container"></div>
-  </div>
+    <div class="grid-container"></div>
+    </div>
     <button class="play-again">Play Again</button>
 </body>
 </html>
