--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     </div>
   </div>
   <div class="page-wrapper">
-      <div class="info-board">
-        <div class="scoreboard"></div>
+        <div class="mine-display game-info"></div>
         <div class="timer"></div>  
-      </div>
     <div class="winner">
       <h1>Congratulations</h1>
       <p>Your Final Score Is</p>
