started responsive design

--- a/index.html
+++ b/index.html
@@ -12,15 +12,27 @@
   <title>Document</title>
 </head>
 <body>
+  <audio></audio>
   <div class="end-game"></div>
   <div class="welcome-screen">
     <h1>Welcome to Minesweeper</h1>
-    <p>Please choose your mode</p>
-    <div class ="button-container">
-      <button class= "beginner-button">Beginner</button>
-      <button class="advanced-button">Advanced</button>
-      <button class="expert-button">Expert</button>
+    <div class ="music">
+      <h2>First choose your music</h2>
+      <div class="mode-buttons">
+        <button class= "electronic">Electronic</button>
+        <button class="lofi">LoFi</button>
+        <button class="jazz">Jazz</button>
+      </div>
     </div>
+    <div class ="mode">
+      <h2>Then choose your mode</h2>
+      <div class="mode-buttons">
+        <button class= "beginner-button">Beginner</button>
+        <button class="advanced-button">Advanced</button>
+        <button class="expert-button">Expert</button>
+      </div>
+    </div>
+    <p class="music-info"></p>
   </div>
   <div class="page-wrapper">
         <div class="mine-display game-info"></div>
