--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
     <div class="grid-container"></div>
     </div>
     <button class="play-again">Play Again</button>
+    <button class="change-mode">Change Mode</button>
 </body>
 </html>
