--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="welcome-screen">
     <h1>Welcome to Minesweeper</h1>
     <div class ="music">
-      <h2>First choose your music</h2>
+      <h2>Choose your music</h2>
       <div class="mode-buttons">
         <button class= "electronic">Electronic</button>
         <button class="lofi">LoFi</button>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class ="mode">
-      <h2>Then choose your mode</h2>
+      <h2>Choose your mode</h2>
       <div class="mode-buttons">
         <button class= "beginner-button">Beginner</button>
         <button class="advanced-button">Advanced</button>
